--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Kalefive",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "nightwatch",
+    "e2e:setup": "node selenium-setup"
   },
   "dependencies": {
     "blink-diff": "^1.0.13",
@@ -15,6 +17,7 @@
     "geckodriver": "^1.9.0",
     "nightwatch": "^0.9.16",
     "node-inspector": "^1.1.1",
+    "selenium-download": "^2.0.10",
     "selenium-webdriver": "^3.5.0"
   }
 }
