--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,8 @@ chrome:
   image: selenium/node-chrome
   links:
     - selenium-hub:hub
+  environment:
+    HUB_PORT_4444_TCP_ADDR: hub
+    HUB_PORT_4444_TCP_PORT: 4444
   volumes:
     - /dev/shm:/dev/shm
