--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "fs": "0.0.1-security",
     "geckodriver": "^1.9.0",
     "nightwatch": "^0.9.16",
-    "node-inspector": "^1.1.1",
-    "selenium-webdriver": "^3.5.0"
+    "selenium-webdriver": "^3.5.0",
+    "json": "9.0.6"
   }
 }
