--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "aws-sdk": "^2.216.1",
+    "aws-sdk": "^2.283.1",
     "blink-diff": "^1.0.13",
-    "chromedriver": "^2.33.0",
-    "express": "^4.13.3",
+    "chromedriver": "^2.40.0",
+    "express": "^4.16.3",
     "fs": "0.0.1-security",
-    "geckodriver": "^1.9.0",
-    "nightwatch": "^0.9.16",
-    "selenium-webdriver": "^3.5.0",
-    "json": "9.0.6"
+    "geckodriver": "^1.12.0",
+    "json": "9.0.6",
+    "nightwatch": "^0.9.21",
+    "selenium-webdriver": "^3.5.0"
   }
 }
